[gd_scene load_steps=5 format=3 uid="uid://bf4yavytkigtt"]

[ext_resource type="Script" path="res://Scripts/introduction_ui.gd" id="1_8bsjk"]
[ext_resource type="FontFile" uid="uid://bjid8fas1lv2w" path="res://Assets/Fonts/SpaceMono-Bold.ttf" id="2_waa07"]

[sub_resource type="Gradient" id="Gradient_oakmm"]
colors = PackedColorArray(0.807843, 0.12549, 0.160784, 1, 0.517647, 0.533333, 0.517647, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gbvqw"]
gradient = SubResource("Gradient_oakmm")
width = 1280
height = 720
fill_from = Vector2(0, 0.986748)

[node name="Introduction" type="Node"]

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_gbvqw")
stretch_mode = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_8bsjk")

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
custom_minimum_size = Vector2(720, 480)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 280)
layout_mode = 2

[node name="StoryLabel" type="Label" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_waa07")
theme_override_font_sizes/font_size = 32
text = "You are \"Fire Lighter\" a fire fighter turned arsonist for the greater good. You must stop the infected forest from overtaking the city. Good luck"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InstructionsLabel" type="Label" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_waa07")
theme_override_font_sizes/font_size = 32
text = "Controls:
- Move: right click
- Light fire: left click"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_waa07")
theme_override_font_sizes/font_size = 48
text = "Continue"

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ContinueButton" to="CanvasLayer" method="_on_continue_button_pressed"]
